--- a/index.html
+++ b/index.html
@@ -2,261 +2,279 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Platformer</title>
+<title>Ultimate Platformer</title>
 <style>
-  body { margin:0; background:#111; color:white; font-family:Arial; text-align:center;}
-  canvas { background:#222; display:block; margin:0 auto; border:2px solid #555;}
+body{margin:0;background:#111;color:white;font-family:Arial;text-align:center}
+canvas{background:#222;display:block;margin:0 auto;border:2px solid #555}
 </style>
 </head>
 <body>
-<h2>Platformer — Arrow Keys to Move/Jump</h2>
-<canvas id="game" width="800" height="450"></canvas>
-<div id="ui"></div>
+<h2>Ultimate Platformer</h2>
+<canvas id="game" width="900" height="500"></canvas>
 
 <script>
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
-const ui = document.getElementById("ui");
+const canvas=document.getElementById("game");
+const ctx=canvas.getContext("2d");
 
-let keys = {};
-document.addEventListener("keydown", e => keys[e.key] = true);
-document.addEventListener("keyup", e => keys[e.key] = false);
+let keys={};
+document.addEventListener("keydown",e=>{
+keys[e.key]=true;
+if(e.key==="r") resetLevel();
+});
+document.addEventListener("keyup",e=>keys[e.key]=false);
 
-// ---------- GAME DATA ----------
-const gravity = 0.5;
-const moveSpeed = 3;
-const jumpPower = 8;
-const maxJumpHold = 18;
+let gravity=0.5;
+let jumpPower=9;
+let maxJumpHold=20;
 
-let levelIndex = 0;
-let startTime = null;
-let finished = false;
+let levelIndex=0;
+let startTime=null;
+let finished=false;
+let deaths=0;
+let lavaY=9999;
+let shake=0;
 
-const levels = [
+const levels=[
 {
-  start:{x:40,y:350},
-  goal:{x:740,y:320,w:40,h:40},
-  platforms:[
-    {x:0,y:400,w:800,h:50},
-    {x:200,y:320,w:120,h:20},
-    {x:380,y:260,w:120,h:20},
-    {x:560,y:200,w:120,h:20}
-  ],
-  hazards:[{x:320,y:390,w:60,h:10}]
+theme:"grass",
+start:{x:50,y:420},
+goal:{x:820,y:380,w:40,h:40},
+platforms:[
+{x:0,y:460,w:900,h:40},
+{x:220,y:380,w:120,h:20},
+{x:420,y:300,w:120,h:20},
+{x:620,y:220,w:120,h:20}
+],
+hazards:[]
 },
 {
-  start:{x:40,y:350},
-  goal:{x:740,y:80,w:40,h:40},
-  platforms:[
-    {x:0,y:400,w:800,h:50},
-    {x:120,y:300,w:100,h:20},
-    {x:260,y:230,w:100,h:20},
-    {x:400,y:160,w:100,h:20},
-    {x:560,y:100,w:120,h:20}
-  ],
-  hazards:[{x:0,y:390,w:200,h:10},{x:300,y:390,w:200,h:10}]
+theme:"ice",
+start:{x:50,y:420},
+goal:{x:820,y:120,w:40,h:40},
+platforms:[
+{x:0,y:460,w:900,h:40},
+{x:150,y:350,w:140,h:20},
+{x:380,y:260,w:140,h:20},
+{x:650,y:180,w:140,h:20}
+],
+hazards:[{x:250,y:450,w:200,h:10}]
 },
 {
-  start:{x:40,y:350},
-  goal:{x:720,y:350,w:40,h:40},
-  platforms:[
-    {x:0,y:400,w:800,h:50},
-    {x:200,y:340,w:80,h:20},
-    {x:350,y:300,w:80,h:20},
-    {x:500,y:260,w:80,h:20},
-    {x:650,y:220,w:80,h:20}
-  ],
-  hazards:[
-    {x:280,y:390,w:80,h:10},
-    {x:440,y:390,w:80,h:10}
-  ]
+theme:"cave",
+start:{x:50,y:420},
+goal:{x:820,y:80,w:40,h:40},
+platforms:[
+{x:0,y:460,w:900,h:40},
+{x:200,y:340,w:140,h:20,move:1,range:120,dir:1,baseX:200},
+{x:500,y:240,w:140,h:20,move:1,range:150,dir:-1,baseX:500}
+],
+hazards:[{x:0,y:450,w:200,h:10},{x:700,y:450,w:200,h:10}]
 },
 {
-  start:{x:40,y:350},
-  goal:{x:740,y:60,w:40,h:40},
-  platforms:[
-    {x:0,y:400,w:800,h:50},
-    {x:150,y:320,w:120,h:20},
-    {x:350,y:250,w:120,h:20},
-    {x:550,y:180,w:120,h:20},
-    {x:300,y:120,w:120,h:20}
-  ],
-  hazards:[
-    {x:0,y:390,w:150,h:10},
-    {x:650,y:390,w:150,h:10}
-  ]
+theme:"lava",
+start:{x:50,y:420},
+goal:{x:820,y:80,w:40,h:40},
+platforms:[
+{x:0,y:460,w:900,h:40},
+{x:200,y:360,w:100,h:20},
+{x:350,y:280,w:100,h:20},
+{x:520,y:200,w:100,h:20},
+{x:700,y:140,w:100,h:20}
+],
+hazards:[]
 },
 {
-  start:{x:40,y:350},
-  goal:{x:740,y:350,w:40,h:40},
-  platforms:[
-    {x:0,y:400,w:800,h:50},
-    {x:150,y:350,w:80,h:20},
-    {x:300,y:300,w:80,h:20},
-    {x:450,y:250,w:80,h:20},
-    {x:600,y:200,w:80,h:20}
-  ],
-  hazards:[
-    {x:220,y:390,w:80,h:10},
-    {x:380,y:390,w:80,h:10},
-    {x:540,y:390,w:80,h:10}
-  ]
+theme:"sky",
+start:{x:50,y:420},
+goal:{x:820,y:60,w:40,h:40},
+platforms:[
+{x:0,y:460,w:900,h:40},
+{x:220,y:350,w:80,h:20,fall:1},
+{x:380,y:260,w:80,h:20,fall:1},
+{x:540,y:180,w:80,h:20,fall:1},
+{x:700,y:110,w:80,h:20,fall:1}
+],
+hazards:[{x:0,y:450,w:900,h:10}],
+wind:0.08
 }
 ];
 
 let player;
 
 function resetPlayer(){
-  const s = levels[levelIndex].start;
-  player = {
-    x:s.x, y:s.y,
-    w:20, h:20,
-    vx:0, vy:0,
-    onGround:false,
-    jumpHold:0
-  };
-}
-
-function nextLevel(){
-  levelIndex++;
-  if(levelIndex>=levels.length){
-    finished = true;
-    return;
-  }
-  resetPlayer();
+const s=levels[levelIndex].start;
+player={
+x:s.x,y:s.y,w:22,h:22,
+vx:0,vy:0,
+onGround:false,
+jumpHold:0
+};
+if(levels[levelIndex].theme==="lava") lavaY=500;
 }
 
 function resetLevel(){
-  resetPlayer();
+deaths++;
+shake=10;
+resetPlayer();
+}
+
+function nextLevel(){
+levelIndex++;
+if(levelIndex>=levels.length){finished=true;return;}
+resetPlayer();
 }
 
 resetPlayer();
 
-// ---------- COLLISION ----------
-function rectIntersect(a,b){
-  return a.x<a.x+a.w && a.x < b.x+b.w &&
-         a.x+a.w > b.x &&
-         a.y+a.h > b.y &&
-         a.y < b.y+b.h;
-}
-
-// ---------- UPDATE ----------
 function update(){
-  if(finished) return;
+if(finished)return;
+if(!startTime)startTime=performance.now();
 
-  if(!startTime) startTime = performance.now();
+let lvl=levels[levelIndex];
 
-  // movement
-  if(keys["ArrowLeft"]) player.vx = -moveSpeed;
-  else if(keys["ArrowRight"]) player.vx = moveSpeed;
-  else player.vx = 0;
+// movement physics
+let accel=0.6;
+let maxSpeed=4;
 
-  // jump start
-  if(keys["ArrowUp"] && player.onGround){
-    player.vy = -jumpPower;
-    player.onGround = false;
-    player.jumpHold = 0;
-  }
+if(lvl.theme==="ice"){accel=0.15; maxSpeed=5;}
 
-  // hold jump for higher jump
-  if(keys["ArrowUp"] && player.jumpHold < maxJumpHold && player.vy < 0){
-    player.vy -= 0.25;
-    player.jumpHold++;
-  }
+if(keys["ArrowLeft"]) player.vx-=accel;
+if(keys["ArrowRight"]) player.vx+=accel;
 
-  player.vy += gravity;
+player.vx*=0.92;
+if(player.vx>maxSpeed)player.vx=maxSpeed;
+if(player.vx<-maxSpeed)player.vx=-maxSpeed;
 
-  player.x += player.vx;
-  player.y += player.vy;
+// wind (sky level)
+if(lvl.wind) player.vx+=lvl.wind;
 
-  // platforms
-  player.onGround = false;
-  for(const p of levels[levelIndex].platforms){
-    if(player.x < p.x+p.w &&
-       player.x+player.w > p.x &&
-       player.y+player.h > p.y &&
-       player.y+player.h < p.y + 20 &&
-       player.vy >=0){
-        player.y = p.y - player.h;
-        player.vy = 0;
-        player.onGround = true;
-    }
-  }
-
-  // hazards
-  for(const h of levels[levelIndex].hazards){
-    if(player.x < h.x+h.w &&
-       player.x+player.w > h.x &&
-       player.y < h.y+h.h &&
-       player.y+player.h > h.y){
-        resetLevel();
-        return;
-    }
-  }
-
-  // goal
-  const g = levels[levelIndex].goal;
-  if(player.x < g.x+g.w &&
-     player.x+player.w > g.x &&
-     player.y < g.y+g.h &&
-     player.y+player.h > g.y){
-      nextLevel();
-  }
-
-  // fall off map
-  if(player.y > canvas.height+50){
-    resetLevel();
-  }
+// jump
+if(keys["ArrowUp"]&&player.onGround){
+player.vy=-jumpPower;
+player.onGround=false;
+player.jumpHold=0;
+}
+if(keys["ArrowUp"]&&player.jumpHold<maxJumpHold&&player.vy<0){
+player.vy-=0.3;
+player.jumpHold++;
 }
 
-// ---------- DRAW ----------
+player.vy+=gravity;
+player.x+=player.vx;
+player.y+=player.vy;
+
+// moving platforms
+for(const p of lvl.platforms){
+if(p.move){
+p.x+=p.dir*1.5;
+if(Math.abs(p.x-p.baseX)>p.range)p.dir*=-1;
+}
+}
+
+// collisions
+player.onGround=false;
+for(const p of lvl.platforms){
+if(player.x<p.x+p.w&&player.x+player.w>p.x&&
+player.y+player.h>p.y&&player.y+player.h<p.y+20&&player.vy>=0){
+player.y=p.y-player.h;
+player.vy=0;
+player.onGround=true;
+
+if(p.fall) p.y+=2;
+}
+}
+
+// lava
+if(lvl.theme==="lava"){
+lavaY-=0.2;
+if(player.y+player.h>lavaY) resetLevel();
+}
+
+// hazards
+for(const h of lvl.hazards){
+if(player.x<h.x+h.w&&player.x+player.w>h.x&&
+player.y<h.y+h.h&&player.y+player.h>h.y){
+resetLevel();
+}
+}
+
+// goal
+let g=lvl.goal;
+if(player.x<g.x+g.w&&player.x+player.w>g.x&&
+player.y<g.y+g.h&&player.y+player.h>g.y){
+nextLevel();
+}
+
+if(player.y>600)resetLevel();
+}
+
 function draw(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
+let camX=(Math.random()-0.5)*shake;
+let camY=(Math.random()-0.5)*shake;
+if(shake>0)shake*=0.9;
 
-  if(finished){
-    ctx.fillStyle="white";
-    ctx.font="40px Arial";
-    ctx.fillText("Finished!", 300,200);
-    const time = ((performance.now()-startTime)/1000).toFixed(2);
-    ctx.fillText("Total Time: "+time+"s", 250,260);
-    return;
-  }
+ctx.setTransform(1,0,0,1,camX,camY);
+ctx.clearRect(-50,-50,1000,600);
 
-  // player
-  ctx.fillStyle="cyan";
-  ctx.fillRect(player.x,player.y,player.w,player.h);
-
-  // platforms
-  ctx.fillStyle="#888";
-  for(const p of levels[levelIndex].platforms){
-    ctx.fillRect(p.x,p.y,p.w,p.h);
-  }
-
-  // hazards
-  ctx.fillStyle="red";
-  for(const h of levels[levelIndex].hazards){
-    ctx.fillRect(h.x,h.y,h.w,h.h);
-  }
-
-  // goal
-  const g = levels[levelIndex].goal;
-  ctx.fillStyle="lime";
-  ctx.fillRect(g.x,g.y,g.w,g.h);
-
-  // timer
-  const t = ((performance.now()-startTime)/1000).toFixed(2);
-  ctx.fillStyle="white";
-  ctx.font="18px Arial";
-  ctx.fillText("Time: "+t+"s",10,20);
-  ctx.fillText("Level: "+(levelIndex+1)+"/5",10,40);
+if(finished){
+ctx.fillStyle="white";
+ctx.font="50px Arial";
+ctx.fillText("YOU WIN",350,220);
+let t=((performance.now()-startTime)/1000).toFixed(2);
+ctx.font="30px Arial";
+ctx.fillText("Time: "+t+"s",380,270);
+ctx.fillText("Deaths: "+deaths,370,310);
+return;
 }
 
-// ---------- LOOP ----------
-function loop(){
-  update();
-  draw();
-  requestAnimationFrame(loop);
+let lvl=levels[levelIndex];
+
+// background
+const bg={
+grass:"#203d20",
+ice:"#1e3f5a",
+cave:"#2b2b2b",
+lava:"#3a1a1a",
+sky:"#1a2d4a"
+};
+ctx.fillStyle=bg[lvl.theme]||"#222";
+ctx.fillRect(0,0,900,500);
+
+// platforms
+ctx.fillStyle="#888";
+for(const p of lvl.platforms) ctx.fillRect(p.x,p.y,p.w,p.h);
+
+// lava
+if(lvl.theme==="lava"){
+ctx.fillStyle="orange";
+ctx.fillRect(0,lavaY,900,500-lavaY);
 }
+
+// hazards
+ctx.fillStyle="red";
+for(const h of lvl.hazards) ctx.fillRect(h.x,h.y,h.w,h.h);
+
+// goal
+ctx.fillStyle="lime";
+let g=lvl.goal;
+ctx.fillRect(g.x,g.y,g.w,g.h);
+
+// player
+ctx.fillStyle="cyan";
+ctx.fillRect(player.x,player.y,player.w,player.h);
+
+// UI
+let t=((performance.now()-startTime)/1000).toFixed(2);
+ctx.fillStyle="white";
+ctx.font="18px Arial";
+ctx.fillText("Time: "+t,10,20);
+ctx.fillText("Deaths: "+deaths,10,40);
+ctx.fillText("Level "+(levelIndex+1)+"/5",10,60);
+ctx.fillText("Theme: "+lvl.theme,10,80);
+ctx.fillText("R = restart",10,100);
+}
+
+function loop(){update();draw();requestAnimationFrame(loop);}
 loop();
 </script>
 </body>
