--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Platformer Boss Edition</title>
+<title>Platformer Deluxe</title>
 <style>
 body{margin:0;background:#111;color:white;font-family:Arial;text-align:center}
 canvas{background:#222;display:block;margin:0 auto;border:2px solid #555}
 </style>
 </head>
 <body>
-<h2>Platformer Boss Edition</h2>
+<h2>Platformer Deluxe</h2>
 <canvas id="game" width="900" height="500"></canvas>
 
 <script>
@@ -17,306 +17,297 @@ const canvas=document.getElementById("game");
 const ctx=canvas.getContext("2d");
 
 let keys={};
-document.addEventListener("keydown",e=>{
-keys[e.key]=true;
-if(e.key==="r") resetLevel();
-});
+document.addEventListener("keydown",e=>keys[e.key]=true);
 document.addEventListener("keyup",e=>keys[e.key]=false);
+
+// -------- PLAYER / STATS ----------
+let coins=0;
+let totalCoins=0;
+let deaths=0;
+let startTime=null;
+let finished=false;
+
+let skins=[
+{name:"Cyan",color:"cyan",cost:0,owned:true},
+{name:"Red",color:"red",cost:15},
+{name:"Green",color:"lime",cost:25},
+{name:"Gold",color:"gold",cost:40},
+{name:"Void",color:"white",cost:60}
+];
+let currentSkin=0;
+
+let shopOpen=false;
 
 let gravity=0.5;
 let jumpPower=9;
 let maxJumpHold=18;
 
 let levelIndex=0;
-let startTime=null;
-let finished=false;
-let deaths=0;
 
-let boss=null;
-let bossShots=[];
+// ---------- LEVELS (10) ----------
+function makeCoins(arr){
+return arr.map(c=>({x:c[0],y:c[1],r:8,taken:false}));
+}
 
 const levels=[
-{
-theme:"grass",
-start:{x:50,y:420},
-goal:{x:820,y:380,w:40,h:40},
-platforms:[
-{x:0,y:460,w:900,h:40},
-{x:220,y:380,w:120,h:20},
-{x:420,y:300,w:120,h:20},
-{x:620,y:220,w:120,h:20}
-],
-hazards:[]
-},
-{
-theme:"ice",
-start:{x:50,y:420},
-goal:{x:820,y:120,w:40,h:40},
-platforms:[
-{x:0,y:460,w:900,h:40},
-{x:150,y:350,w:140,h:20},
-{x:380,y:260,w:140,h:20},
-{x:650,y:180,w:140,h:20}
-],
-hazards:[{x:250,y:450,w:200,h:10}]
-},
-{
-theme:"walljump",
-start:{x:50,y:420},
-goal:{x:820,y:60,w:40,h:40},
-platforms:[
-{x:0,y:460,w:900,h:40},
-{x:300,y:340,w:20,h:120},
-{x:500,y:220,w:20,h:120},
-{x:700,y:100,w:20,h:120}
-],
-hazards:[]
-},
-{
-theme:"lava",
-start:{x:50,y:420},
-goal:{x:820,y:80,w:40,h:40},
-platforms:[
-{x:0,y:460,w:900,h:40},
-{x:200,y:360,w:100,h:20},
-{x:350,y:280,w:100,h:20},
-{x:520,y:200,w:100,h:20},
-{x:700,y:140,w:100,h:20}
-],
-hazards:[]
-},
-{
-theme:"boss",
-start:{x:50,y:420},
-goal:{x:820,y:60,w:40,h:40},
-platforms:[
-{x:0,y:460,w:900,h:40},
-{x:250,y:350,w:120,h:20},
-{x:520,y:260,w:120,h:20}
-],
-hazards:[]
-}
+{theme:"grass",start:{x:50,y:420},goal:{x:820,y:380,w:40,h:40},
+platforms:[{x:0,y:460,w:900,h:40},{x:250,y:380,w:120,h:20},{x:500,y:300,w:120,h:20}],
+coins:makeCoins([[300,350],[550,270]])},
+
+{theme:"ice",start:{x:50,y:420},goal:{x:820,y:100,w:40,h:40},
+platforms:[{x:0,y:460,w:900,h:40},{x:200,y:350,w:120,h:20},{x:450,y:250,w:120,h:20},{x:650,y:170,w:120,h:20}],
+coins:makeCoins([[240,320],[500,220],[700,140]])},
+
+{theme:"wall",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
+platforms:[{x:0,y:460,w:900,h:40},{x:350,y:340,w:20,h:120},{x:550,y:220,w:20,h:120}],
+coins:makeCoins([[380,300],[580,180]])},
+
+{theme:"lava",start:{x:50,y:420},goal:{x:820,y:80,w:40,h:40},
+platforms:[{x:0,y:460,w:900,h:40},{x:200,y:360,w:100,h:20},{x:350,y:280,w:100,h:20},{x:520,y:200,w:100,h:20}],
+coins:makeCoins([[240,330],[380,250],[550,170]])},
+
+{theme:"sky",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
+platforms:[{x:0,y:460,w:900,h:40},{x:250,y:340,w:80,h:20},{x:450,y:260,w:80,h:20},{x:650,y:180,w:80,h:20}],
+coins:makeCoins([[280,310],[480,230],[680,150]])},
+
+{theme:"hard1",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
+platforms:[{x:0,y:460,w:900,h:40},{x:200,y:380,w:80,h:20},{x:350,y:320,w:80,h:20},{x:520,y:260,w:80,h:20}],
+coins:makeCoins([[230,350],[380,290],[560,230]])},
+
+{theme:"hard2",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
+platforms:[{x:0,y:460,w:900,h:40},{x:300,y:350,w:20,h:120},{x:600,y:200,w:20,h:120}],
+coins:makeCoins([[330,300],[630,150]])},
+
+{theme:"speed",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
+platforms:[{x:0,y:460,w:900,h:40},{x:200,y:350,w:100,h:20},{x:500,y:250,w:100,h:20}],
+coins:makeCoins([[230,320],[530,220]])},
+
+{theme:"insane",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
+platforms:[{x:0,y:460,w:900,h:40},{x:350,y:350,w:80,h:20},{x:600,y:250,w:80,h:20}],
+coins:makeCoins([[380,320],[630,220]])},
+
+{theme:"boss",start:{x:50,y:420},goal:null,
+platforms:[{x:0,y:460,w:900,h:40},{x:300,y:350,w:120,h:20},{x:600,y:250,w:120,h:20}],
+coins:makeCoins([[330,320],[650,220]])}
 ];
 
+// -------- PLAYER --------
 let player;
+let boss;
+let shots=[];
 
 function resetPlayer(){
 const s=levels[levelIndex].start;
-player={
-x:s.x,y:s.y,w:22,h:22,
-vx:0,vy:0,
-onGround:false,
-jumpHold:0,
-jumpsLeft:2,
-touchingWall:false,
-jumpPressed:false
-};
+player={x:s.x,y:s.y,w:22,h:22,vx:0,vy:0,onGround:false,jumps:2,hold:0,wall:false};
+boss=null;
+shots=[];
 
-bossShots=[];
 if(levels[levelIndex].theme==="boss"){
-boss={x:750,y:380,w:40,h:40,hp:5,cooldown:0};
+boss={x:750,y:380,w:40,h:40,hp:8,cd:0};
 }
 }
-
-function resetLevel(){
-deaths++;
 resetPlayer();
-}
 
-function nextLevel(){
+// -------- SHOP ----------
+function openShop(){
+shopOpen=true;
+}
+function closeShop(){
+shopOpen=false;
 levelIndex++;
 if(levelIndex>=levels.length){finished=true;return;}
 resetPlayer();
 }
 
-resetPlayer();
-
-function rect(a,b){
-return a.x<a.x+a.w&&
-a.x<b.x+b.w&&
-a.x+a.w>b.x&&
-a.y+a.h>b.y&&
-a.y<b.y+b.h;
-}
-
+// -------- UPDATE ----------
 function update(){
 if(finished)return;
 if(!startTime)startTime=performance.now();
+
+if(shopOpen){
+if(keys["1"]) buyOrSelect(1);
+if(keys["2"]) buyOrSelect(2);
+if(keys["3"]) buyOrSelect(3);
+if(keys["4"]) buyOrSelect(4);
+if(keys["Enter"]) closeShop();
+return;
+}
 
 let lvl=levels[levelIndex];
 
 // movement
 let accel=0.6;
-let maxSpeed=4;
-if(lvl.theme==="ice"){accel=0.2;maxSpeed=5;}
+if(lvl.theme==="ice") accel=0.2;
 
 if(keys["ArrowLeft"]) player.vx-=accel;
 if(keys["ArrowRight"]) player.vx+=accel;
 player.vx*=0.9;
-if(player.vx>maxSpeed)player.vx=maxSpeed;
-if(player.vx<-maxSpeed)player.vx=-maxSpeed;
 
-// jump + double + wall jump
-if(keys["ArrowUp"] && !player.jumpPressed){
-if(player.jumpsLeft>0){
+if(keys["ArrowUp"]&&player.jumps>0){
 player.vy=-jumpPower;
-player.jumpsLeft--;
-player.jumpHold=0;
+player.jumps--;
+player.hold=0;
 }
-else if(player.touchingWall){
-player.vy=-jumpPower;
-player.vx*= -1.2; // push off wall
-}
-player.jumpPressed=true;
-}
-if(!keys["ArrowUp"]) player.jumpPressed=false;
-
-// hold jump higher
-if(keys["ArrowUp"]&&player.jumpHold<maxJumpHold&&player.vy<0){
+if(keys["ArrowUp"]&&player.hold<maxJumpHold&&player.vy<0){
 player.vy-=0.3;
-player.jumpHold++;
+player.hold++;
 }
 
 player.vy+=gravity;
 player.x+=player.vx;
 player.y+=player.vy;
 
-// collisions
 player.onGround=false;
-player.touchingWall=false;
+player.wall=false;
 
 for(const p of lvl.platforms){
-
-// wall detection
-if(player.x+player.w>p.x && player.x<p.x+p.w &&
-player.y+player.h>p.y && player.y<p.y+p.h){
-
-// landing
-if(player.vy>=0 && player.y+player.h<p.y+15){
+if(player.x<p.x+p.w&&player.x+player.w>p.x&&
+player.y+player.h>p.y&&player.y+player.h<p.y+20&&player.vy>=0){
 player.y=p.y-player.h;
 player.vy=0;
 player.onGround=true;
-player.jumpsLeft=2;
-}
-
-// hit left wall
-if(player.x+player.w>p.x && player.x<p.x && !player.onGround){
-player.touchingWall=true;
-}
-
-// hit right wall
-if(player.x<p.x+p.w && player.x+player.w>p.x+p.w && !player.onGround){
-player.touchingWall=true;
-}
+player.jumps=2;
 }
 }
 
-// boss logic
-if(lvl.theme==="boss" && boss){
-boss.cooldown--;
-if(boss.cooldown<=0){
-boss.cooldown=60;
-bossShots.push({
-x:boss.x,
-y:boss.y+10,
-vx:-5
-});
-}
-
-// shots move
-for(let s of bossShots){
-s.x+=s.vx;
-
-// hit player
-if(player.x<s.x+10&&player.x+player.w>s.x&&
-player.y<s.y+10&&player.y+player.h>s.y){
-resetLevel();
+// coins
+for(const c of lvl.coins){
+if(!c.taken &&
+player.x<c.x+10 && player.x+player.w>c.x-10 &&
+player.y<c.y+10 && player.y+player.h>c.y-10){
+c.taken=true;
+coins++;
+totalCoins++;
 }
 }
 
-// win if reach boss
-if(player.x>boss.x-20 && player.y>boss.y-20){
-boss.hp--;
-player.vx=-6;
-if(boss.hp<=0) nextLevel();
-}
-}
-
-// goal for non-boss
-if(lvl.theme!=="boss"){
+// goal
+if(lvl.goal){
 let g=lvl.goal;
 if(player.x<g.x+g.w&&player.x+player.w>g.x&&
 player.y<g.y+g.h&&player.y+player.h>g.y){
-nextLevel();
+openShop();
 }
 }
 
-if(player.y>600) resetLevel();
+// boss
+if(lvl.theme==="boss" && boss){
+boss.cd--;
+if(boss.cd<=0){
+boss.cd=50;
+shots.push({x:boss.x,y:boss.y+10,vx:-6});
+}
+for(const s of shots){
+s.x+=s.vx;
+if(player.x<s.x+10&&player.x+player.w>s.x&&
+player.y<s.y+10&&player.y+player.h>s.y){
+deaths++; resetPlayer(); return;
+}
+}
+if(player.x>boss.x-20&&player.y>boss.y-20){
+boss.hp--;
+player.vx=-6;
+if(boss.hp<=0){finished=true;}
+}
 }
 
+if(player.y>600){deaths++;resetPlayer();}
+}
+
+// -------- SHOP BUY ----------
+function buyOrSelect(i){
+let s=skins[i];
+if(!s) return;
+if(!s.owned){
+if(coins>=s.cost){coins-=s.cost; s.owned=true;}
+}else currentSkin=i;
+}
+
+// -------- DRAW ----------
 function draw(){
 ctx.clearRect(0,0,900,500);
 
 if(finished){
 ctx.fillStyle="white";
 ctx.font="50px Arial";
-ctx.fillText("YOU BEAT THE GAME",220,220);
+ctx.fillText("YOU WIN",350,220);
 let t=((performance.now()-startTime)/1000).toFixed(2);
 ctx.font="30px Arial";
 ctx.fillText("Time: "+t+"s",380,270);
-ctx.fillText("Deaths: "+deaths,370,310);
+ctx.fillText("Deaths: "+deaths,380,310);
+ctx.fillText("Coins: "+totalCoins,380,350);
 return;
 }
 
-let lvl=levels[levelIndex];
+if(shopOpen){
+ctx.fillStyle="black";
+ctx.fillRect(0,0,900,500);
+ctx.fillStyle="white";
+ctx.font="40px Arial";
+ctx.fillText("SHOP",380,80);
+ctx.font="20px Arial";
+ctx.fillText("Coins: "+coins,20,40);
+ctx.fillText("Press number to buy/select. Enter to continue.",200,450);
 
-// backgrounds
-const bg={
-grass:"#203d20",
-ice:"#1e3f5a",
-walljump:"#2e243f",
-lava:"#3a1a1a",
-boss:"#000"
-};
-ctx.fillStyle=bg[lvl.theme]||"#222";
+skins.forEach((s,i)=>{
+ctx.fillStyle=s.color;
+ctx.fillRect(200,140+i*60,40,40);
+ctx.fillStyle="white";
+let txt=s.name+" ";
+if(!s.owned) txt+="Cost:"+s.cost;
+else txt+="Owned";
+if(i===currentSkin) txt+=" (equipped)";
+ctx.fillText((i)+": "+txt,260,170+i*60);
+});
+return;
+}
+
+// level draw
+let lvl=levels[levelIndex];
+ctx.fillStyle="#222";
 ctx.fillRect(0,0,900,500);
 
 // platforms
 ctx.fillStyle="#888";
-for(const p of lvl.platforms)
-ctx.fillRect(p.x,p.y,p.w,p.h);
+for(const p of lvl.platforms) ctx.fillRect(p.x,p.y,p.w,p.h);
+
+// coins
+ctx.fillStyle="gold";
+for(const c of lvl.coins) if(!c.taken){
+ctx.beginPath();
+ctx.arc(c.x,c.y,8,0,Math.PI*2);
+ctx.fill();
+}
 
 // boss
 if(lvl.theme==="boss" && boss){
 ctx.fillStyle="purple";
 ctx.fillRect(boss.x,boss.y,boss.w,boss.h);
-
 ctx.fillStyle="red";
-for(let s of bossShots) ctx.fillRect(s.x,s.y,10,10);
-
+for(const s of shots) ctx.fillRect(s.x,s.y,10,10);
 ctx.fillStyle="white";
-ctx.fillText("Boss HP: "+boss.hp,700,30);
+ctx.fillText("Boss HP:"+boss.hp,720,30);
 }
 
 // goal
-if(lvl.theme!=="boss"){
+if(lvl.goal){
 ctx.fillStyle="lime";
 let g=lvl.goal;
 ctx.fillRect(g.x,g.y,g.w,g.h);
 }
 
 // player
-ctx.fillStyle="cyan";
+ctx.fillStyle=skins[currentSkin].color;
 ctx.fillRect(player.x,player.y,player.w,player.h);
 
 // UI
 let t=((performance.now()-startTime)/1000).toFixed(2);
 ctx.fillStyle="white";
 ctx.font="18px Arial";
-ctx.fillText("Time: "+t,10,20);
-ctx.fillText("Deaths: "+deaths,10,40);
-ctx.fillText("Level "+(levelIndex+1)+"/5",10,60);
-ctx.fillText("Wall jump enabled",10,80);
+ctx.fillText("Time:"+t,10,20);
+ctx.fillText("Coins:"+coins,10,40);
+ctx.fillText("Deaths:"+deaths,10,60);
+ctx.fillText("Level:"+(levelIndex+1)+"/10",10,80);
 }
 
 function loop(){update();draw();requestAnimationFrame(loop);}
